--- a/Calculator/style.css
+++ b/Calculator/style.css
@@ -15,6 +15,8 @@ html {
     position: absolute;
     top: 50%;
     left: 50%;
+    transform: translate(-50%, -50%);
+    width: 500px;
 }
 
 .calculator-screen {
