--- a/OnePageWebsite/CSS/style.css
+++ b/OnePageWebsite/CSS/style.css
@@ -4,6 +4,7 @@ html {
     -webkit-tap-highlight-color: rgba(0,0,0,0);
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -13,6 +14,13 @@ body {
     line-height: 1.5;
     color: #333333;
     background-color: #fff;
+    opacity: 1;
+    transition: 1s opacity;
+}
+
+body.fade-out {
+    opacity: 0;
+    transition: none;
 }
 
 footer, nav {
@@ -56,7 +64,7 @@ p {
 /* MENU */
 
 .menu {
-    color: #444444;
+    color: #e7e7e7;
     font: bold 12px/18px sans-serif;
     text-align: center;
     display: inline;
@@ -67,7 +75,7 @@ p {
 }
 
 .menu li {
-    color: #444444;
+    color: #e7e7e7;
     background-color: rgba(150, 150, 150, .8);
     display: inline-block;
     margin: 0% auto;
@@ -110,7 +118,7 @@ p {
 /* Home */
 
 #home {
-    background: url(../images/thumbs/thumb3.jpg) no-repeat 50% 50%;
+    background: url(../images/background.jpg) no-repeat 50% 50%;
     background-attachment: fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -121,8 +129,9 @@ p {
     height: auto;
     padding-top: 350px;
     padding-bottom: 500px;
-    color: #444444;
-    font-family: impact;
+    color: #e7e7e7;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 2vw;
     line-height: 2;
 
 }
@@ -147,16 +156,16 @@ p {
 .head-main {
     text-shadow: 2px 4px 5px rgba(0, 0, 0, 0.9);
     font-variant: small-caps;
-    color: #444444;
+    color: #e7e7e7;
     letter-spacing: 5pt;
     word-spacing: 21pt;
     font-style: 4em;
     text-align: left;
-    font-family: impact;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     line-height: 2;
     font-weight: 900;
-    font-size: 100px;
-    border: 5px double #444444;
+    font-size: 7vw;
+    border: 5px double #e7e7e7;
     padding: 10px;
   
 }
@@ -174,6 +183,7 @@ p {
     display: -webkit-flex;
     display: flex;
     flex-wrap: wrap;
+    justify-content:center;
     padding: 10px;
     border-radius: 8px;
     margin:auto auto;
@@ -260,6 +270,10 @@ p {
 /* video */
 
 .video {
+    display: -webkit-flex;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:center;
     width: auto;
     padding: 10px;
     border-radius: 8px;
@@ -331,4 +345,19 @@ p {
 
 .contact input[type="text"]:hover {
     box-shadow: 0 0 18px rgba(100, 65, 0, .8);
+}
+
+.keyframe {
+    width: 300px;
+    height:300px;
+    background:url(../images/keyframe.jpg);
+    position: absolute;
+    animation: mymove 15s infinite;
+}
+
+@keyframes mymove {
+    0%   {right: 0%;}
+    50% {right: 100%;}
+    100%   {right: 0%;}
+    0% {
 }
