--- a/TicTacToe/css/game.css
+++ b/TicTacToe/css/game.css
@@ -1,10 +1,13 @@
 h1 {
     text-align: center;
+    color: red;
 }
 
 .center-container {
+    display:flex;
+    justify-content:center;
     width: 608;
-    margin: 0 auto;
+    margin: auto;
     margin-top: 50px;
 }
 
@@ -15,7 +18,7 @@ table {
 
 td {
     cursor: pointer;
-    border: 4px solid rgba(82, 14, 190, 0.8);
+    border: 4px solid black;
     padding: 0px;
     width: 200px;
     height: 200px;
